--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,6 @@ url('../fonts/Roboto Mono.svg#webfont') format('svg');
 font-weight: normal;
 font-style: normal;
 }
-::-webkit-scrollbar { /* chrome based */
-    width: 0px;  /* ширина scrollbar'a */
-    background: transparent;  /* опционально */
-}
 * {
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -29,16 +25,22 @@ font-style: normal;
 	-ms-user-select: none;
 	user-select: none;
 }
-html {
-    -ms-overflow-style: none;  /* IE 10+ */
-    scrollbar-width: none; /* Firefox */
-}
 body{
 	background: #202033;
 	cursor: standart;
-	height: 20000px;
 }
-.shade{
+a{
+	display: block;
+	text-decoration: none;
+	color:  inherit;
+}
+.shade,
+.light-theme-button,
+.dark-theme-button,
+.menu,
+.all-about,
+.contacts,
+.header-logo{
 	-webkit-transition: all .5s ease;
 	-moz-transition: all .5s ease;
 	-ms-transition: all .5s ease;
@@ -259,7 +261,7 @@ body{
 	width: 27%;
 	height: 57%;
 	left: 10%;
-	top: 114%;
+	top: 116%;
 	border-radius: 65px;
 } 
 .text-img-second-shade{
@@ -473,7 +475,7 @@ body{
 .sixth-main-text ul li{
 	margin-left: 0.5%;
 	padding-left: 2%;
-	background: url(../img/arrow.svg) no-repeat -1% 90%;
+	background: url('../img/arrow.svg') no-repeat -1% 90%;
     background-size: 3%;
 }
 .sixth-main-text-shade{
@@ -563,12 +565,12 @@ body{
 }
 .ninth-main-text{
 	position: absolute;
-	width: 50%;
-	left: 23%;
-	top: 690%;
+	width: 51%;
+	left: 22.5%;
+	top: 687%;
 	text-align: center;
 	padding: 0 2%;
-	background: #424668;
+	background: #5C5C7D;
 	border-radius: 25px;
 }
 .ninth-four-p{
@@ -624,11 +626,183 @@ body{
 	background: #191929;
 	border-radius: 25px;
 }
+.imgs-container{
+	position: absolute;
+	width: 86%;
+	left:  3%;
+	top:  920%;
+	padding: 4%;
+    background: #424668;
+	border-radius: 45px;
+}
+.imgs1{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 28vw;
+}
+.imgs2{
+	margin-top: -8%;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 28vw;
+	grid-column-gap: 4%;
+}
+.imgs3{
+	margin-top: 2%;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-rows: 28vw;
+	margin-bottom: -10%;
+}
+.imgs-container div img{
+	width: 100%;
+	height: 70%;
+}
+.imgs-container .imgs2 img{
+	height:  100%;
+}
+footer{
+	display: grid;
+	position: absolute;
+	width: 78%;
+	left:  8%;
+	top:  1086%;
+	padding: 2% 2% 2% 4%;
+	background: #373756;
+	border-radius: 40px;
+	font-family: Oswald;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 1.8vw;
+	line-height: 3vw;
+	letter-spacing: -0.02em;
+	color: #ffffff;
+	grid-template-columns: repeat(3, 1fr) 0.5fr;
+}
+footer div{
+	background: url("../img/logo header.svg") no-repeat 50% 50%;
+	background-size: 62% 62%;
+	background-color: #DB7629;
+	border-radius: 35px;
+	width: 90%;
+	-webkit-user-select: text;
+	-khtml-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
+
+}
+footer p{
+	margin-top: 2%;
+	-webkit-user-select: text;
+	-khtml-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
+}
+footer p:first-child{
+	margin-top: 6%;
+}
+.bottom{
+	position: absolute;
+	width: 78%;
+	left:  8%;
+	top:  1118%;
+	height: 1%;
+}
 
 
 
 
 
+/* -------------- light theme -------------- */
+.header-logo.light{
+	background: url("../img/logo header light.svg") no-repeat 50% 50%;
+	background-color: #DB7629;
+	background-size: 62% 62%;
+}
+.shade.light{
+	background-color: #666666;
+	color: #666666;
+}
+.header-menu.light{
+	background: #DADADA;
+}
+.header-menu.light div{
+	color: #ffffff;
+}
+.header-menu:hover + .header-menu-shade.light,
+.first-main-text:hover + .first-main-text-shade.light,
+.text-img-first:hover + .text-img-first-shade.light,
+.second-main-text:hover + .second-main-text-shade.light,
+.text-img-second:hover + .text-img-second-shade.light,
+.text-img-third:hover + .text-img-third-shade.light,
+.third-main-text:hover + .third-main-text-shade.light,
+.text-img-fourth:hover + .text-img-fourth-shade.light,
+.text-img-fifth:hover + .text-img-fifth-shade.light,
+.fourth-main-text:hover + .fourth-main-text-shade.light,
+.fifth-main-text:hover + .fifth-main-text-shade.light,
+.text-img-sixth:hover + .text-img-sixth-shade.light,
+.sixth-main-text:hover + .sixth-main-text-shade.light,
+.seventh-main-text:hover + .seventh-main-text-shade.light,
+.eighth-main-text:hover + .eighth-main-text-shade.light,
+.tenth-main-text:hover + .tenth-main-text-shade.light,
+.text-img-seventh:hover + .text-img-seventh-shade.light,
+.text-img-eighth:hover + .text-img-eighth-shade.light{
+	background: #474747;
+}
+.first-main-text.light,
+.second-main-text.light,
+.third-main-text.light,
+.fourth-main-text.light,
+.fifth-main-text.light,
+.sixth-main-text.light,
+.seventh-main-text.light,
+.eighth-main-text.light,
+.tenth-main-text.light{
+	background: #999999;
+	color: #191929;
+}
+.first-main-text.light p,
+.second-main-text.light p,
+.third-main-text.light p,
+.fourth-main-text.light p,
+.fifth-main-text.light p,
+.sixth-main-text.light p,
+.seventh-main-text.light p,
+.eighth-main-text.light p,
+.tenth-main-text.light p{
+	color: #191929;
+}
+.sixth-main-text.light ul li{
+	color: #191929;
+}
+.orange.light{
+	color: #FDFDFD;
+}
+.ninth-main-text.light{
+	background: #DADADA;
+	color: #191929;
+}
+.ninth-main-text.light p{
+	color: #191929;
+}
+footer.light{
+	background: #7C7C7C;
+}
+.logo-footer.light{
+	background: url("../img/logo header light.svg") no-repeat 50% 50%;
+	background-color: #DB7629;
+	background-size: 62% 62%;
+}
+.imgs-container.light{
+	background: #999999;
+}
+.sixth-main-text.light ul li{
+	background: url('../img/arrow light.svg') no-repeat -1% 90%;
+	background-size: 2%;
+}
+/* -------------- light theme -------------- */
 
 
 
