--- a/css/style.css
+++ b/css/style.css
@@ -807,8 +807,8 @@ footer.light{
 
 
 
-
-@media (max-width: 851px) {
+/*##Device = Most of the Smartphones Mobiles (Portrait)*/
+@media (min-width: 220px) and (max-width: 767px) {
 	.header-logo{
 		height: 7%;
 		top: 2%;
@@ -847,6 +847,425 @@ footer.light{
 	}
 	.header-text-img{
 		margin-top: 4%;
+	}
+	.first-main-text{
+		top: 18%;
+		padding:  1% 0 1% 0;
+		border-radius: 9px;
+		min-height: 11%;
+	}
+	.first-four-p{
+		font-size: calc(2vw);
+	}
+	.first-main-text-shade{
+		height: 12%;
+		top: 17%;
+		border-radius: 0 9px 9px 0;
+	}
+	.text-img-first{
+		height: 12%;
+		top: 21%;
+		border-radius: 9px;
+	} 
+	.text-img-first-shade{
+		left:  61%;
+		height: 12%;
+		top: 19.5%;
+		border-radius: 9px;
+	}
+	.second-four-p{
+		width: 85%;
+		font-size: calc(1.5vw);
+	}
+	.second-main-text{
+		top: 36%;
+		padding:  1% 0 1% 0%;
+		border-radius: 9px;
+		min-height: 12%;
+	}
+	.second-main-text-shade{
+		height: 11%;
+		right:  8%;
+		top: 34.5%;
+		z-index: -1;
+		border-radius: 9px;
+	}
+	.text-img-second{
+		height: 15%;
+		left: 9%;
+		top: 30.5%;
+		border-radius: 9px;
+	} 
+	.text-img-second-shade{
+		height: 15%;
+		left: 6%;
+		top: 28%;
+		border-radius: 9px;
+	}
+	.text-img-third{
+		height: 10%;
+		top: 47.2%;
+		border-radius: 9px;
+	} 
+	.text-img-third-shade{
+		height: 10%;
+		top: 46%;
+		border-radius: 9px;
+	}
+	.third-main-text{
+		top: 56%;
+		padding:  1% 2% 2% 3%;
+		border-radius: 9px;
+		min-height: 27vw;
+	}
+	.third-four-p{
+		font-size: calc(1.6vw);
+	}
+	.third-main-text-shade{
+		height: 29vw;
+		top: 54.5%;
+		border-radius: 0 9px 9px 0;
+	}
+	.text-img-fourth{
+		height: 15%;
+		top: 65%;
+		border-radius: 9px;
+	} 
+	.text-img-fourth-shade{
+		height: 15%;
+		top: 63.3%;
+		border-radius: 9px;
+	}
+	.text-img-fifth{
+		height: 15%;
+		top: 72%;
+		left: 3%;
+		border-radius: 9px;
+	} 
+	.text-img-fifth-shade{
+		height: 15%;
+		top: 70%;
+		left: -2%;
+		border-radius: 9px;
+	}
+
+	.fourth-main-text{
+		width: 63%;
+		top: 78.5%;
+		padding:  2% 2% 2% 4%;
+		border-radius: 9px;
+		min-height: 14.2%;
+	}
+	.fourth-four-p{
+		font-size: calc(1.7vw);
+	}
+	.fourth-main-text-shade{
+		position: absolute;
+		width: 69%;
+		height: 16.6%;
+		top: 77%;
+		border-radius: 9px;
+	}
+	.fifth-main-text{
+		top: 99%;
+		padding: 0 3%;
+		border-radius: 9px;
+		min-height: 11%;
+	}
+	.fifth-four-p{
+		font-size: calc(1.7vw);
+	}
+	.fifth-main-text-shade{
+		top: 98%;
+		height: 11%;
+		padding: 0 3%;
+		border-radius: 9px;
+	}
+	.text-img-sixth{
+		height: 21%;
+		top: 106%;
+		border-radius: 9px;
+	} 
+	.text-img-sixth-shade{
+		height: 21%;
+		top: 103%;
+		border-radius: 9px;
+	}
+
+
+
+
+
+	.sixth-main-text{
+		position: absolute;
+		width: 88%;
+		left: 3%;
+		top: 430%;
+		padding: 1% 3%;
+		background: #424668;
+		border-radius: 25px;
+	}
+	.sixth-four-p{
+		color: #dedcdc;
+		font-family: 'Roboto Mono', Arial, sans-serif;
+		font-size: calc(1.5vw);
+		line-height: 150%;
+		letter-spacing: -0.02em;
+	}
+	.sixth-h{
+		font-size: calc(1.8vw);
+		font-weight: 700;
+	}
+	.bigger-font{
+		font-size: calc(1.6vw);
+
+	}
+	.sixth-main-text ul{
+		color: #dedcdc;
+		font-family: 'Roboto Mono', Arial, sans-serif;
+		font-size: calc(1.5vw);
+		line-height: 150%;
+		letter-spacing: -0.02em;
+		list-style: none;
+	    
+	}
+	.sixth-main-text ul li{
+		margin-left: 0.5%;
+		padding-left: 2%;
+		background: url('../img/arrow.svg') no-repeat -1% 90%;
+	    background-size: 3%;
+	}
+	.sixth-main-text-shade{
+		position: absolute;
+		width: 88%;
+		height: 69%;
+		left: 1%;
+		top: 426%;
+		padding: 1% 3%;
+		z-index: -1;
+		color: #191929;
+		background: #191929;
+		border-radius: 25px;
+	}
+
+	.seventh-main-text{
+		position: absolute;
+		width: 88%;
+		left: 3%;
+		top: 513%;
+		padding: 0 3%;
+		background: #424668;
+		border-radius: 25px;
+	}
+	.seventh-four-p{
+		color: #dedcdc;
+		font-family: 'Roboto Mono', Arial, sans-serif;
+		font-size: calc(1.5vw);
+		line-height: 150%;
+		letter-spacing: -0.02em;
+	}
+	.seventh-main-text-shade{
+		position: absolute;
+		width: 88%;
+		left: 1%;
+		top: 508%;
+		padding:  7.1% 3%;
+		z-index: -1;
+		color: #191929;
+		background: #191929;
+		border-radius: 25px;
+	}
+	.eighth-main-text{
+		position: absolute;
+		width: 88%;
+		left: 3%;
+		top: 553%;
+		padding: 0 3%;
+		background: #424668;
+		border-radius: 25px;
+	}
+	.eighth-four-p{
+		color: #dedcdc;
+		font-family: 'Roboto Mono', Arial, sans-serif;
+		font-size: calc(1.5vw);
+		line-height: 150%;
+		letter-spacing: -0.02em;
+	}
+	.eighth-main-text-shade{
+		position: absolute;
+		width: 88%;
+		left: 1%;
+		top: 548%;
+		padding:  7.1% 3%;
+		z-index: -1;
+		color: #191929;
+		background: #191929;
+		border-radius: 25px;
+	}
+	.text-img-seventh{
+		position: absolute;
+		width: 94%;
+		left: 3%;
+		top: 595%;
+		border-radius: 65px;
+		z-index: 1;
+	} 
+	.text-img-seventh-shade{
+		position: absolute;
+		width: 94%;
+		left: 1%;
+		top: 587%;
+		padding: 20.8% 0;
+		background: #191929;
+		border-radius: 65px;
+		z-index: -1;
+	}
+	.ninth-main-text{
+		position: absolute;
+		width: 51%;
+		left: 22.5%;
+		top: 687%;
+		text-align: center;
+		padding: 0 2%;
+		background: #5C5C7D;
+		border-radius: 25px;
+	}
+	.ninth-four-p{
+		color: #dedcdc;
+		font-family: 'Roboto Mono', Arial, sans-serif;
+		font-size: calc(2.3vw);
+		line-height: 150%;
+		letter-spacing: -0.02em;
+		font-weight: 700;
+	}
+	.text-img-eighth{
+		position: absolute;
+		width: 94%;
+		left: 3%;
+		top: 719%;
+		border-radius: 65px;
+		z-index: 1;
+	} 
+	.text-img-eighth-shade{
+		position: absolute;
+		width: 94%;
+		left: 1%;
+		top: 711%;
+		padding: 20.8% 0;
+		background: #191929;
+		border-radius: 65px;
+		z-index: -1;
+	}
+	.tenth-main-text{
+		position: absolute;
+		width: 89%;
+		left: 2.5%;
+		top: 810%;
+		padding: 0 3%;
+		background: #424668;
+		border-radius: 25px;
+	}
+	.tenth-four-p{
+		color: #dedcdc;
+		font-family: 'Roboto Mono', Arial, sans-serif;
+		font-size: calc(1.5vw);
+		line-height: 150%;
+		letter-spacing: -0.02em;
+	}
+	.tenth-main-text-shade{
+		position: absolute;
+		width: 90%;
+		left: 1%;
+		top: 805%;
+		padding:  25% 3%;
+		z-index: -1;
+		color: #191929;
+		background: #191929;
+		border-radius: 25px;
+	}
+	.imgs-container{
+		position: absolute;
+		width: 86%;
+		left:  3%;
+		top:  920%;
+		padding: 4%;
+	    background: #424668;
+		border-radius: 45px;
+	}
+	.imgs1{
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 28vw;
+	}
+	.imgs2{
+		margin-top: -8%;
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 28vw;
+		grid-column-gap: 4%;
+	}
+	.imgs3{
+		margin-top: 2%;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr;
+		grid-template-rows: 28vw;
+		margin-bottom: -10%;
+	}
+	.imgs-container div img{
+		width: 100%;
+		height: 70%;
+	}
+	.imgs-container .imgs2 img{
+		height:  100%;
+	}
+	footer{
+		display: grid;
+		position: absolute;
+		width: 78%;
+		left:  8%;
+		top:  1086%;
+		padding: 2% 2% 2% 4%;
+		background: #373756;
+		border-radius: 40px;
+		font-family: Oswald;
+		font-style: normal;
+		font-weight: normal;
+		font-size: 1.8vw;
+		line-height: 3vw;
+		letter-spacing: -0.02em;
+		color: #ffffff;
+		grid-template-columns: repeat(3, 1fr) 0.5fr;
+	}
+	footer div{
+		background: url("../img/logo header.svg") no-repeat 50% 50%;
+		background-size: 62% 62%;
+		background-color: #DB7629;
+		border-radius: 35px;
+		width: 90%;
+		-webkit-user-select: text;
+		-khtml-user-select: text;
+		-moz-user-select: text;
+		-ms-user-select: text;
+		user-select: text;
+
+	}
+	footer p{
+		margin-top: 2%;
+		-webkit-user-select: text;
+		-khtml-user-select: text;
+		-moz-user-select: text;
+		-ms-user-select: text;
+		user-select: text;
+	}
+	footer p:first-child{
+		margin-top: 6%;
+	}
+	.bottom{
+		position: absolute;
+		width: 78%;
+		left:  8%;
+		top:  1118%;
+		height: 1%;
 	}
 
 }
