--- a/css/style.css
+++ b/css/style.css
@@ -750,6 +750,7 @@ footer p:first-child{
 .text-img-seventh:hover + .text-img-seventh-shade.light,
 .text-img-eighth:hover + .text-img-eighth-shade.light{
 	background: #474747;
+	color: #474747;;
 }
 .first-main-text.light,
 .second-main-text.light,
@@ -991,281 +992,79 @@ footer.light{
 		top: 103%;
 		border-radius: 9px;
 	}
-
-
-
-
-
 	.sixth-main-text{
-		position: absolute;
-		width: 88%;
-		left: 3%;
-		top: 430%;
-		padding: 1% 3%;
-		background: #424668;
-		border-radius: 25px;
-	}
-	.sixth-four-p{
-		color: #dedcdc;
-		font-family: 'Roboto Mono', Arial, sans-serif;
-		font-size: calc(1.5vw);
-		line-height: 150%;
-		letter-spacing: -0.02em;
-	}
-	.sixth-h{
-		font-size: calc(1.8vw);
-		font-weight: 700;
-	}
-	.bigger-font{
-		font-size: calc(1.6vw);
-
+		top: 129%;
+		border-radius: 9px;
+		min-height: 19vh;
 	}
 	.sixth-main-text ul{
-		color: #dedcdc;
-		font-family: 'Roboto Mono', Arial, sans-serif;
-		font-size: calc(1.5vw);
-		line-height: 150%;
-		letter-spacing: -0.02em;
-		list-style: none;
-	    
-	}
-	.sixth-main-text ul li{
-		margin-left: 0.5%;
-		padding-left: 2%;
-		background: url('../img/arrow.svg') no-repeat -1% 90%;
-	    background-size: 3%;
+		margin-left: -8%;
 	}
 	.sixth-main-text-shade{
-		position: absolute;
-		width: 88%;
-		height: 69%;
-		left: 1%;
-		top: 426%;
-		padding: 1% 3%;
-		z-index: -1;
-		color: #191929;
-		background: #191929;
-		border-radius: 25px;
+		height: 19vh;
+		top: 127.5%;
+		border-radius: 9px;
 	}
-
 	.seventh-main-text{
-		position: absolute;
-		width: 88%;
-		left: 3%;
-		top: 513%;
-		padding: 0 3%;
-		background: #424668;
-		border-radius: 25px;
-	}
-	.seventh-four-p{
-		color: #dedcdc;
-		font-family: 'Roboto Mono', Arial, sans-serif;
-		font-size: calc(1.5vw);
-		line-height: 150%;
-		letter-spacing: -0.02em;
+		top: 152%;
+		border-radius: 9px;
+		min-height: 8.6vh; 
 	}
 	.seventh-main-text-shade{
-		position: absolute;
-		width: 88%;
-		left: 1%;
-		top: 508%;
-		padding:  7.1% 3%;
-		z-index: -1;
-		color: #191929;
-		background: #191929;
-		border-radius: 25px;
+		top: 151%;
+		border-radius: 9px;
+		height: 0.6vh; 
 	}
 	.eighth-main-text{
-		position: absolute;
-		width: 88%;
-		left: 3%;
-		top: 553%;
-		padding: 0 3%;
-		background: #424668;
-		border-radius: 25px;
-	}
-	.eighth-four-p{
-		color: #dedcdc;
-		font-family: 'Roboto Mono', Arial, sans-serif;
-		font-size: calc(1.5vw);
-		line-height: 150%;
-		letter-spacing: -0.02em;
+		top: 164%;
+		min-height: 8vh;
+		border-radius: 9px;
 	}
 	.eighth-main-text-shade{
-		position: absolute;
-		width: 88%;
-		left: 1%;
-		top: 548%;
-		padding:  7.1% 3%;
-		z-index: -1;
-		color: #191929;
-		background: #191929;
-		border-radius: 25px;
+		min-height: 0.1vh;
+		top: 163%;
+		border-radius: 9px;
 	}
 	.text-img-seventh{
-		position: absolute;
-		width: 94%;
-		left: 3%;
-		top: 595%;
-		border-radius: 65px;
-		z-index: 1;
+		top: 175%;
+		border-radius: 9px;
 	} 
 	.text-img-seventh-shade{
-		position: absolute;
-		width: 94%;
-		left: 1%;
-		top: 587%;
-		padding: 20.8% 0;
-		background: #191929;
-		border-radius: 65px;
-		z-index: -1;
+		top: 173%;
+		border-radius: 9px;
 	}
 	.ninth-main-text{
-		position: absolute;
-		width: 51%;
-		left: 22.5%;
-		top: 687%;
-		text-align: center;
-		padding: 0 2%;
-		background: #5C5C7D;
-		border-radius: 25px;
-	}
-	.ninth-four-p{
-		color: #dedcdc;
-		font-family: 'Roboto Mono', Arial, sans-serif;
-		font-size: calc(2.3vw);
-		line-height: 150%;
-		letter-spacing: -0.02em;
-		font-weight: 700;
+		top: 199vh;
+		min-height: 4.7vh;
+		border-radius: 9px;
 	}
 	.text-img-eighth{
-		position: absolute;
-		width: 94%;
-		left: 3%;
-		top: 719%;
-		border-radius: 65px;
-		z-index: 1;
+		top: 207%;
+		border-radius: 9px
 	} 
 	.text-img-eighth-shade{
-		position: absolute;
-		width: 94%;
-		left: 1%;
-		top: 711%;
-		padding: 20.8% 0;
-		background: #191929;
-		border-radius: 65px;
-		z-index: -1;
+		top: 206%;
+		border-radius: 9px;
 	}
 	.tenth-main-text{
-		position: absolute;
-		width: 89%;
-		left: 2.5%;
-		top: 810%;
-		padding: 0 3%;
-		background: #424668;
-		border-radius: 25px;
-	}
-	.tenth-four-p{
-		color: #dedcdc;
-		font-family: 'Roboto Mono', Arial, sans-serif;
-		font-size: calc(1.5vw);
-		line-height: 150%;
-		letter-spacing: -0.02em;
+		top: 232%;
+		border-radius: 9px;
+		min-height: 28vh;
 	}
 	.tenth-main-text-shade{
-		position: absolute;
-		width: 90%;
-		left: 1%;
-		top: 805%;
-		padding:  25% 3%;
-		z-index: -1;
-		color: #191929;
-		background: #191929;
-		border-radius: 25px;
+		top: 231%;
+		border-radius: 9px;
 	}
 	.imgs-container{
-		position: absolute;
-		width: 86%;
-		left:  3%;
-		top:  920%;
-		padding: 4%;
-	    background: #424668;
-		border-radius: 45px;
-	}
-	.imgs1{
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-rows: 28vw;
-	}
-	.imgs2{
-		margin-top: -8%;
-		display: grid;
-		grid-template-columns: 1fr 1fr;
-		grid-template-rows: 28vw;
-		grid-column-gap: 4%;
-	}
-	.imgs3{
-		margin-top: 2%;
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		grid-template-rows: 28vw;
-		margin-bottom: -10%;
-	}
-	.imgs-container div img{
-		width: 100%;
-		height: 70%;
-	}
-	.imgs-container .imgs2 img{
-		height:  100%;
+		top:  262%;
+		border-radius: 9px;
 	}
 	footer{
-		display: grid;
-		position: absolute;
-		width: 78%;
-		left:  8%;
-		top:  1086%;
-		padding: 2% 2% 2% 4%;
-		background: #373756;
-		border-radius: 40px;
-		font-family: Oswald;
-		font-style: normal;
-		font-weight: normal;
-		font-size: 1.8vw;
-		line-height: 3vw;
-		letter-spacing: -0.02em;
-		color: #ffffff;
-		grid-template-columns: repeat(3, 1fr) 0.5fr;
-	}
-	footer div{
-		background: url("../img/logo header.svg") no-repeat 50% 50%;
-		background-size: 62% 62%;
-		background-color: #DB7629;
-		border-radius: 35px;
-		width: 90%;
-		-webkit-user-select: text;
-		-khtml-user-select: text;
-		-moz-user-select: text;
-		-ms-user-select: text;
-		user-select: text;
-
-	}
-	footer p{
-		margin-top: 2%;
-		-webkit-user-select: text;
-		-khtml-user-select: text;
-		-moz-user-select: text;
-		-ms-user-select: text;
-		user-select: text;
-	}
-	footer p:first-child{
-		margin-top: 6%;
+		top:  308%;
+		border-radius: 9px;
 	}
 	.bottom{
-		position: absolute;
-		width: 78%;
-		left:  8%;
-		top:  1118%;
-		height: 1%;
+		top:  317%;
 	}
-
+	
 }
